refactor: rename example to examples/Demo/Demo.java, update run-demo.bat and README